# collider-dashboard

./: .__afs08CE  .__afs1829  .__afs1DE2  .__afs28AB  .__afs2BFE  .__afs3146  .__afs431A  .__afs4EED  .__afs516  .__afs52E  .__afs61DD  .__afs64F  .__afs859A  .__afs974D  .__afs98BC  .__afsBD49  .__afsF439  .__afsFD0A  .gitignore  LICENSE  README.md  dashboard.py  dashboard_functions.py  functions.py  init.py  install.sh  load_dashboards_sequentially.py  mkdocs.yml  nohup.out  plot.py  pyproject.toml  readme.MD  requirements.txt  resonance.py  tools.ipynb  visualize_twiss_dashboard.py
app/: dashboard.py  init.py  plot.py  resonance.py
app/layout/: configuration.py  filling.py  footprint.py  header.py  optics.py  separation.py  separation_3D.py  tables.py
collider_dashboard/: __init__.py  __main__.py  callbacks.py  dashboard.py
collider_dashboard/assets/: style.css
collider_dashboard/backend/: compute_globals.py  init.py  plot.py  resonance.py
collider_dashboard/backend/fillingpatterns/: disclaimer.md
collider_dashboard/data/: 25ns_2556b_2544_2211_2327_3x48bpi_20inj.json  25ns_2760b_2748_2492_2574_288bpi_13inj_800ns_bs200ns_converted.json  8b4e_1972b_1960_1178_1886_224bpi_12inj_800ns_bs200ns.json
collider_dashboard/layout/: __init__.py  configuration.py  header.py  knob.py  optics.py  sanity.py  separation_3D.py
correction/: corr_co_lhcb1.json  corr_co_lhcb2.json
dashboard/: __init__.py  __main__.py  app.py  callbacks.py  dashboard.py  main.py
dashboard/backend/: init.py  plot.py  resonance.py
dashboard/backend/fillingpatterns/: disclaimer.md
dashboard/data/: 25ns_2464b_2452_1842_1821_236bpi_12inj_hybrid_converted.json
dashboard/layout/: __init__.py  filling.py  footprint.py  header.py  main.py  optics.py  sanity.py  separation.py  separation_3D.py  survey.py  tables.py
docs/: callbacks.md  dashboard.md  index.md  main.md
docs/backend/: init.md  plot.md  resonance.md
docs/layout/: configuration.md  filling.md  footprint.md  header.md  main.md  optics.md  sanity.md  separation.md  separation_3D.md  survey.md  tables.md
layout/: configuration.py  filling.py  footprint.py  header.py  optics.py  sanity.py  separation.py  separation_3D.py  survey.py  tables.py
notebooks/: prototyping.ipynb
